Adding Parent details in child scenario.